--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,16 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    padding: 1rem 0;
+    padding: 3rem 0;
     box-sizing: border-box;
 }
 
 .content {
-    max-width: 1200px;
+    max-width: 600px;
     width: 90%;
     margin: auto;
+}
+
+nav a.active {
+    background-color: #2d2d2d;
 }
