--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    padding: 3rem 0;
+    padding: 3rem 0 5rem 0;
     box-sizing: border-box;
 }
 
