--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,28 @@
 @import "tailwindcss";
 
-body {
+body,
+#root {
     background-color: #0b0b0b;
     color: white;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    padding: 3rem 0 5rem 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 .content {
     max-width: 600px;
     width: 90%;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-nav a.active {
+nav#mobile-nav a.active {
     background-color: #2d2d2d;
     border-top: 1px solid rgb(147, 147, 147);
+}
+
+nav#desktop-nav a.active {
+    border-bottom: 2px solid rgb(148, 148, 148);
 }
