--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body,
     color: white;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100dvh;
     box-sizing: border-box;
     overflow-x: hidden;
 }
