--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 body,
 #root {
-    background-color: #0b0b0b;
+    background-color: #0f0f0f;
     color: white;
     display: flex;
     flex-direction: column;
