--- a/src/index.css
+++ b/src/index.css
@@ -22,9 +22,9 @@ body,
 }
 
 .modal {
-    @apply max-w-[90%] w-80 min-h-40 bg-neutral-700/30 backdrop-blur-lg rounded-xl border border-white/5 p-4 flex flex-col items-center justify-around text-center;
+    @apply max-w-md w-[90%] min-h-32 bg-neutral-700/30 backdrop-blur-lg rounded-xl border border-white/5 p-4 flex flex-col items-center justify-between gap-6;
 }
 
 .modal-overlay {
-    @apply w-screen h-screen fixed flex justify-center items-center top-0 left-0 bg-black/70 z-30;
+    @apply w-screen h-screen fixed flex justify-center items-center top-0 left-0 bg-black/80 z-30;
 }
