--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "tailwindcss";
 
 body,
@@ -10,7 +10,7 @@ body,
     min-height: 100dvh;
     box-sizing: border-box;
     overflow-x: hidden;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Inter", sans-serif;
 }
 
 .content {
@@ -22,7 +22,7 @@ body,
 }
 
 .modal {
-    @apply max-w-md w-[90%] min-h-32 bg-neutral-700/30 backdrop-blur-lg rounded-xl border border-white/5 p-4 flex flex-col items-center justify-between gap-6;
+    @apply max-w-md w-[90%] min-h-32 bg-zinc-700/30 backdrop-blur-lg rounded-2xl border border-white/5 p-4 flex flex-col items-center justify-between gap-6;
 }
 
 .modal-overlay {
