--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
 body,
 #root {
-    background-color: #0f0f0f;
+    background-color: #0f0f11;
     color: white;
     display: flex;
     flex-direction: column;
