--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,11 @@
     --background: #0f0f11;
     --secondary: #18181b;
     --secondary-bright: #27272a;
-    --text: #ffffff;
-    --text-grey: #737373;
+    --text: #e9e9e9;
+    --text-grey: #6b6b6b;
     --border: rgba(113, 113, 122, 0.5);
-    --danger: #b91c1c;
-    --danger-bright: #ef4444;
+    --danger: #d51818;
+    --danger-bright: #f13333;
 }
 
 @theme {
