--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
     --secondary-bright: #27272a;
     --text: #e9e9e9;
     --text-grey: #6b6b6b;
-    --border: rgba(113, 113, 122, 0.5);
+    --border: #71717a80;
     --danger: #d51818;
     --danger-bright: #f13333;
 }
