--- a/src/index.css
+++ b/src/index.css
@@ -58,3 +58,14 @@ body,
 .modal-overlay {
     @apply w-screen h-screen fixed flex justify-center items-center top-0 left-0 bg-black/80 z-30;
 }
+
+input.no-spinner::-webkit-outer-spin-button,
+input.no-spinner::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    appearance: none;
+    margin: 0;
+}
+input.no-spinner {
+    -moz-appearance: textfield;
+    appearance: textfield;
+}
