--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,9 @@ input.no-spinner {
     -moz-appearance: textfield;
     appearance: textfield;
 }
+
+@custom-variant standalone {
+    @media (display-mode: standalone) {
+        @slot;
+    }
+}
