--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ body,
 }
 
 .button {
-    @apply px-4 py-2.5 rounded-full inline-flex justify-center items-center gap-2 border-2;
+    @apply px-4 py-2.5 rounded-full inline-flex justify-center items-center gap-2 border-2 transition-all duration-200;
 }
 
 .modal {
