--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@
     --border: #71717a80;
     --danger: #d51818;
     --danger-bright: #f13333;
+
+    --safe-top: env(safe-area-inset-top, 0px);
+    --safe-bottom: env(safe-area-inset-bottom, 0px);
+    --safe-left: env(safe-area-inset-left, 0px);
+    --safe-right: env(safe-area-inset-right, 0px);
 }
 
 @theme {
@@ -81,17 +86,4 @@ input.no-spinner {
     #root {
         min-height: 100vh;
     }
-}
-
-nav.android {
-    padding-bottom: 1.5rem;
-}
-
-nav.ios {
-    padding-bottom: 2rem;
-}
-
-main.android,
-main.ios {
-    padding-bottom: 6rem;
 }
