--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
     --secondary-bright: #27272a;
     --text: #e1e1e1;
     --text-grey: #6b6b6b;
+    --nav-text: #717376;
     --border: #71717a80;
     --danger: #d51818;
     --danger-bright: #f13333;
@@ -31,6 +32,7 @@
     --secondary-bright: #c8c8c8;
     --text: #1b1b1b;
     --text-grey: #6a6a6a;
+    --nav-text: #717376;
     --border: #bdbdbd;
     --danger: #dc2626;
     --danger-bright: #ef4444;
