--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
     --secondary-bright: #27272a;
     --text: #e1e1e1;
     --text-grey: #6b6b6b;
-    --nav-text: #717376;
+    --nav-text: #7d7f83;
     --border: #71717a80;
     --danger: #d51818;
     --danger-bright: #f13333;
