--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
     --secondary: #151517;
     --secondary-bright: #202023;
     --text: #e1e1e1;
-    --text-grey: #6b6b6b;
+    --text-grey: #585858;
     --nav-text: #7d7f83;
     --border: #71717a80;
     --danger: #d51818;
