--- a/src/index.css
+++ b/src/index.css
@@ -66,19 +66,50 @@ body,
 }
 
 .content {
-    @apply max-w-5xl w-[90%] mx-auto;
+    max-width: 1000px;
+    width: 90%;
+    margin: 0 auto;
 }
 
 .button {
-    @apply px-4 py-2.5 rounded-full inline-flex justify-center items-center gap-2 border-2 transition-all duration-200;
+    padding: 0.625rem 1rem;
+    border-radius: calc(infinity * 1px);
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    border-width: 2px;
+    transition: 200ms;
 }
 
 .modal {
-    @apply max-w-lg w-[90%] min-h-32 max-h-full bg-[var(--secondary)] backdrop-blur-lg rounded-[var(--radius)] border border-[var(--border)]/20 p-4 flex flex-col items-center justify-between gap-6;
+    max-width: 500px;
+    width: 90%;
+    min-height: 8rem;
+    max-height: 100%;
+    background-color: var(--secondary);
+    backdrop-filter: blur(1rem);
+    border-radius: var(--radius);
+    border: 1px solid color-mix(in srgb, var(--border) 20%, transparent);
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1.5rem;
 }
 
 .modal-overlay {
-    @apply w-screen h-screen fixed flex justify-center items-center top-0 left-0 bg-black/80 z-30;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 30;
 }
 
 input.no-spinner::-webkit-outer-spin-button,
@@ -90,10 +121,4 @@ input.no-spinner::-webkit-inner-spin-button {
 input.no-spinner {
     -moz-appearance: textfield;
     appearance: textfield;
-}
-
-@custom-variant standalone {
-    @media (display-mode: standalone) {
-        @slot;
-    }
 }
