--- a/src/index.css
+++ b/src/index.css
@@ -110,6 +110,7 @@ body,
     left: 0;
     background-color: rgba(0, 0, 0, 0.8);
     z-index: 30;
+    backdrop-filter: blur(0.25rem);
 }
 
 input.no-spinner::-webkit-outer-spin-button,
