--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,7 @@ body,
     min-height: 4rem;
     max-height: 100%;
     background-color: var(--secondary);
+    -webkit-backdrop-filter: blur(1rem);
     backdrop-filter: blur(1rem);
     border-radius: var(--radius);
     border: 1px solid color-mix(in srgb, var(--border) 20%, transparent);
@@ -110,6 +111,7 @@ body,
     left: 0;
     background-color: rgba(0, 0, 0, 0.8);
     z-index: 30;
+    -webkit-backdrop-filter: blur(0.25rem);
     backdrop-filter: blur(0.25rem);
 }
 
