--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,9 @@
     /* Border radius */
     --radius: 1.25rem;
 
+    /* Content width */
+    --content-width: 1000px;
+
     /* Font */
     --font: "Inter", sans-serif;
 
@@ -66,7 +69,7 @@ body,
 }
 
 .content {
-    max-width: 1000px;
+    max-width: var(--content-width);
     width: 90%;
     margin: 0 auto;
 }
